# CHILmesh

./: .domi-pin  .gitattributes  .gitignore  API.md  BENCHMARK.md  CHANGELOG.md  CHILmesh.py  CITATION.cff  CLAUDE.md  CONTEXT.md  FEM-SMOOTHER-REINTEGRATION-PLAN.md  GOVERNANCE_UPDATES.md  HOOKS-AUDIT.md  LICENSE  MANIFEST.in  MODERNIZATION_PLAN.md  PLANNING_DATA_STRUCTURE_MODERNIZATION.md  PLANNING_PHASE_SUMMARY.md  PLANNING_SESSION_SUMMARY.md  PLANNING_SUMMARY.md  PROGRESS.md  PYTHON-COMPAT-EXPLORATION.md  README.md  SECURITY.md  TEST-AUDIT.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  annulus_quickstart.png.b64  constitution.md  generate_3row_admesh.py  generate_4row_admesh.py  plot_utils.py  project_plan.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  CONTEXT.md  claude_routine_instructions.md  settings.json  signing-incidents-issue.marker
.claude/handoffs/: 2026-06-09-chilmesh-ci-green.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  general.md  research_or_task.yml  skill_request.yml
.github/workflows/: LOCAL.md  build-cpp-wheels.yml  introspect-monthly-review.yml  publish-pypi.yml  python-package.yml  release-integrity.yml  workflow-conformance.yml
.planning/: .continue-here.md  008-DECISION.md  008-EXECUTION-SUMMARY.md  ADMESH-DOMAINS-CLARIFY.md  ADMESH-DOMAINS-IO-SPEC.md  ADMESH-DOMAINS-ISSUES.md  AUDIT_REPORT.md  CODE-STRUCTURE-AUDIT.md  FEM-SMOOTHER-REINTEGRATION-PLAN.md  GOVERNANCE_UPDATES.md  HANDOFF.json  HOOKS-AUDIT.md  MODERNIZATION_LESSONS_LEARNED.md  MODERNIZATION_PLAN.md  MODERNIZATION_SYNTHESIS.md  PHASE-1-FEATURE-SPECIFICATION.md  PHASE-2-SPECIFICATION.md  PHASE-3-SPECIFICATION.md  PHASE-4-COMPLETION.md  PHASE-4-SPECIFICATION.md  PHASE-4-WORKPLAN.md  PHASE-5-HALF-EDGE-OPTIMIZATION-SPEC.md  PHASE_9_RUST_PORT_PLAN.md  PLANNING_DATA_STRUCTURE_MODERNIZATION.md  PLANNING_PHASE_SUMMARY.md  PLANNING_SESSION_SUMMARY.md  PLANNING_SUMMARY.md  PROGRESS.md  RESEARCH-SPECIFICATION.md  ROADMAP.md  STATE.md  TEST-AUDIT.md  TEST_COVERAGE_ANALYSIS.md  ZENODO-SETUP.md  constitution.md  project_plan.md  v5.0-CONTEXT.md
.planning/codebase/: ARCH.md  CONCERNS.md  TECH.md
.planning/introspections/: main_a6b7b62.md
.planning/research/: dynamic_ops_design.md  pinch_point_detection.md  quad_edge_feasibility.md  skeletonization_analysis.md
.specify/: feature.json  speckit-constitution.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
@CHILmesh/: CHILmesh.m
ci/: ci.yml.pending
conda/: README.md  meta.yaml
docs/: ADJACENCY_STRUCTURES.md  API.md  ARCHITECTURE.md  AUDIT_REPORT.md  BENCHMARK.md  CHIL_FORMAT_INVESTIGATION.md  CHILmesh_Access_Interface.md  CONCEPTS.md  DOWNSTREAM_MIGRATION_GUIDE.md  LEXICON_PROPOSAL.md  README.md  RUST_PERFORMANCE.md  SECURITY.md
docs/dev/: security-audit-v1.0.0.md
docs/gallery/: benchmark.json  mixed_demo.fort14
docs/introspections/: 2026-05-22T07Z-routine-hour07.md  2026-05-22T13Z-routine-hour13.md  2026-05-24T03Z-phase5-perf-sweep.md  2026-05-25T01Z-routine-hour01.md  2026-05-29T01Z-routine-hour01.md  2026-06-01T09Z-routine-hour09.md  2026-06-02T02Z_daily-maintenance.md  2026-06-02T23Z_daily-maintenance.md  2026-06-04T16Z_daily-maintenance.md  2026-06-04T22Z_daily-maintenance.md  2026-06-08T02Z-daily-maintenance-scrub.md  daily-maintenance_2026-05-31.md  daily-maintenance_6803804.md  daily-maintenance_6b65408.md  daily-maintenance_e91aebb.md  development_1855806.md  development_1b6b219.md  development_2b6923e.md  development_2ef79b3.md  development_4ef7952.md  development_83f6229.md  development_8a29e57.md  development_8b8f848.md  development_97a7368.md  development_a2634c0.md  development_ae77ee1.md  development_b764338.md  development_bd6d9b9.md  development_c7a581c.md  development_e56ac9e.md  development_f06a0ad.md  development_f41dfd6.md  (+2 more)
examples/: 01_quickstart.py  02_fort14_roundtrip.py  03_smoothing.py  04_spatial_queries.py  README.md
output/: benchmark.json  pipeline_annulus_scene.py  skeletonization_annulus_scene.py  skeletonization_scene.py  smoothing_annulus_scene.py
research/: graph_benchmarks.py  pinch_point_detection.md  skeletonization_analysis.md
scripts/: api_semver_gate.py  benchmark.py  benchmark_all_backends.py  benchmark_cpp.py  benchmark_halfedge_variants.py  benchmark_quadegg_variants.py  benchmark_rust.py  benchmark_wnat_hagen.py  build_cpp.sh  cloud-setup.sh  generate_3row_admesh.py  generate_enpac_showcase.py  generate_hero_animation.py  generate_mixed_truss_demo.py  generate_wnat_showcase.py  github_release.py  illustrate_mesh_concepts.py  illustrate_truss_convergence.py  instructions.sh  instructions_on_start.sh  pypi_publish.py  verify_mesh_pin.py
src/: CHILmesh.py
src/chilmesh_core/: Cargo.toml  adjacency.rs  errors.rs  io.rs  lib.rs  mutation.rs  queries.rs  skeletonization.rs
src/chilmesh_cpp/: CMakeLists.txt  pyproject.toml
src/chilmesh_cpp/src/: bindings.cpp  halfedge.cpp  halfedge.hpp
tests/: TESTING.md  conftest.py  test_2dm_reader.py  test_2dm_roundtrip.py  test_adjacency_rust.py  test_admesh_metadata.py  test_admesh_warmstart.py  test_advancing_front.py  test_angle_based_smoother.py  test_api_semver_gate.py  test_backend_equivalence.py  test_backend_info.py  test_backend_wrappers.py  test_benchmark_lifecycle.py  test_bridge_adapters.py  test_ccw.py  test_ccw_edges_around_vert.py  test_chil_format.py  test_chilmesh_error_paths.py  test_chilmesh_uncovered_branches.py  test_chilplotting.py  test_cli.py  test_cli_inprocess.py  test_compute_adjacencies_flag.py  test_copy.py  test_ctor_skip_flags.py  test_degeneracy.py  test_distmesh1d.py  test_edge_map.py  test_elem_type.py  test_element_quality_skew.py  test_examples_smoke.py  test_fast_init.py  test_fem_iterative_solver.py  test_fem_smoother_square_preservation.py  test_fort13_errors.py  test_fort13_roundtrip.py  test_fort14_boundary_types.py  test_fort14_quad_roundtrip.py  test_fort14_roundtrip.py  (+49 more)
(+158 files in other folders)
