[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chilmesh"
version = "1.2.0"
description = "Fast 2D mesh library for hydrodynamic domains — Python API with optional C++ acceleration"
authors = [{name = "Dominik Mattioli"}]
license = {text = "PolyForm Noncommercial License 1.0.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "mesh",
    "adcirc",
    "fort.14",
    "hydrodynamics",
    "ocean",
    "smoothing",
    "quadrilateral",
    "finite-element",
    "mesh-quality",
    "computational-geometry",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "pytest-xdist",
    "build",
    "twine",
]

[project.scripts]
chilmesh = "chilmesh.cli:main"

[project.urls]
Homepage = "https://github.com/domattioli/CHILmesh"
Source = "https://github.com/domattioli/CHILmesh"
Issues = "https://github.com/domattioli/CHILmesh/issues"
Changelog = "https://github.com/domattioli/CHILmesh/blob/main/CHANGELOG.md"
Documentation = "https://github.com/domattioli/CHILmesh#readme"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["chilmesh", "chilmesh.utils", "chilmesh.data", "chilmesh.backends"]
license-files = []

[tool.setuptools.package-data]
"chilmesh.data" = ["*.fort.14", "*.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
