[package]
name = "chilmesh_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "chilmesh_core"
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
pyo3 = { version = "0.28.3", features = ["abi3-py38"] }
ndarray = "0.17.2"
thiserror = "2.0.18"
quadtree = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
abi3 = ["pyo3/abi3"]
